<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">mSugam</string>
    <string name="action_settings">Settings</string>
    <string name="type">Choose Type of Transaction</string>
    <string name="category">Choose Category of Transaction</string>
    <string name="submit_button">Submit</string>
    <string name="splash_screen">mSugam</string>
    
    <!-- Field Strings --> 
    
    <string name="other_party_tin">Other Party Tin</string>
    <string name="invoice_number">Invoice No</string>
    <string name="taxable_value">Taxable Value</string>
    <string name="VAT_value">VAT Value</string>
    <string name="other_value">Other Value</string>
    <string name="commodity_code">Start typing commodity name</string>
    <string name="other_party_location">Other Party Location</string>
    
    <string-array name="type_list">
        <!-- <item>Choose Type of Transaction</item> -->
        <item>WS-Within State</item>
        <item>IS-Interstate State</item>
        <item>EX-Export</item>
        <item>IM-Import</item>
    </string-array>
    
    <string-array name="category_list">
        <!-- <item>Choose Category of Transaction</item> -->
        <item>SAL-After Sale</item>
        <item>PUR-After Purchase</item>
        <item>THP-To His Principal</item>
        <item>SGS-To Shop/Go down/Storage</item>
        <item>JRL-Job work/Return/Line Sales</item>
        <item>CSD-Cons. Sale(Despatch)</item>
        <item>CSR-Cons. Sale(Receipt)</item>
        <item>STD-Stock Transfer(Despatch)</item>
        <item>STR-Stock Transfer(Receipt)</item>
        <item>OTH-Others</item>
    </string-array>
    
    <string-array name="commodity_code">
        <item>ADHESIVES OF ALL KINDS</item>
		<item>AGRICULTURAL AND HORTICULTURAL IMPLEMENTS</item>
		<item>ANIMAL AND ITS PRODUCTS</item>
		<item>ARECANUT IN ALL FORMS</item>
		<item>ARMS AND EXPLOSIVES</item>
		<item>AUDIO, MUSIC AND VIDEO SYSTEMS/EQUIPMENTS/PARTS/CDS/CASSETTES/TAPES</item>
		<item>AERO/JET PLANES, HELICAOPTERS AND OTHER FLYING MACHINES/PARTS</item>
		<item>BABY FOODS AND FOOD SUPPLEMENTS</item>
		<item>BAKERY PRODUCTS AND CONFECTIONERY</item>
		<item>BATTERIES OF ALL KINDS AND PARTS</item>
		<item>BICYCLES AND PARTS</item>
		<item>BISCUITS</item>
		<item>BRICKS AND TILES OF ALL KINDS</item>
		<item>CARPETS</item>
		<item>CEMENT AND ITS PRODUCTS AND MIXTURES</item>
		<item>CEREALS AND PULSES</item>
		<item>CHEMICALS</item>
		<item>COAL AND COKE</item>
		<item>COFFEE SEEDS AND COFFEE</item>
		<item>COIR PRODUCTS</item>
		<item>COMPUTER OF ALL KINDS, PERIPHERALS,CONSUMABLES AND SOFTWARE</item>
		<item>COOLING SYSTEMS AND PARTS</item>
		<item>COTTON OF ALL KINDS</item>
		<item>DAIRY PRODUCTS</item>
		<item>DIESEL ENGINES AND PARTS</item>
		<item>DRY FRUITS OTHER THAN CASHEW</item>
		<item>CASHEW</item>
		<item>EDIBLE OILS INCLUDING VANASPATHI</item>
		<item>ELECTRICAL GOODS OF ALL KINDS (HOME/INDUSTRIAL)</item>
		<item>ELECTRONIC GOODS</item>
		<item>FERTILIZERS AND AGRO CHEMICALS</item>
		<item>FIBRE GLASS AND ITS ARTICLES</item>
		<item>FIRE FIGHTING EQUIPMENTS</item>
		<item>FIREWORKS</item>
		<item>FOOD AND DRINKS</item>
		<item>FOOTWEAR OF ALL KINDS AND ACCESSORIES</item>
		<item>FOREST PRODUCES</item>
		<item>FURNITURE OF ALL KINDS</item>
		<item>GLASS AND GLASS ARTICLES</item>
		<item>HANDICRAFTS OF METALS AND IVORY AND SANDALWOOD ARTICLES</item>
		<item>HARDWARE AND PAINTS</item>
		<item>ICE CREAM AND ICE</item>
		<item>INCENSE STICKS</item>
		<item>INDUSTRIAL GASES</item>
		<item>IRON AND STEEL AND ITEMS THEREOF</item>
		<item>SCRAP OF FERROUS AND NON-FERROUS METALS</item>
		<item>JAGGERY</item>
		<item>JEWELLERY AND ALL KINDS OF ARTICLES OF GOLD, SLIVER, PLATINUM</item>
		<item>KITCHEN-WARE (STOVES, FLASKS, CHINAWARE, CUTLERY, ETC)</item>
		<item>LEASING OF GOODS OF ALL KINDS</item>
		<item>LEATHER GOODS OF ALL KINDS EXCLUDING FOOTWEAR</item>
		<item>LIFTS AND ELEVATORS</item>
		<item>LOCOMOTIVES AND PARTS THEREOF</item>
		<item>MACHINERY AND PARTS</item>
		<item>MEDICINAL AND PHARMACEUTICAL PREPARATIONS , EQUIPMENTS</item>
		<item>MINERALS AND ORES</item>
		<item>AUTOMOBILES/MOTOR VEHICLES OF ALL KINDS AND PARTS THEREOF</item>
		<item>MUSICAL INSTRUMENTS</item>
		<item>NARCOTICS</item>
		<item>NON-EDIBLE OIL</item>
		<item>NON-FERROUS METALS (ALUMINIUM, BRONZE, COPPER, BRASS, ZINC, LEAD, MERCURY) AND THEIR PRODUCTS</item>
		<item>OIL SEEDS AND OIL CAKE</item>
		<item>COCONUT,COPRA AND DESICCATED COPRA</item>
		<item>OPTICAL GOODS (BINACULARS, SPECTACLES, SUNGLASSES, MICRO/TELE SCOPES)</item>
		<item>PACKING MATERIALS</item>
		<item>PAPER IN ALL FORMS AND PAPER WASTE</item>
		<item>PETROLEUM PRODUCTS</item>
		<item>PHOTO, FILMS, CAMERAS AND THEIR PARTS, PHOTO/CINEMATOGRAPHIC GOODS</item>
		<item>PIPES AND FITTINGS</item>
		<item>PLASTIC ARTICLES</item>
		<item>PLYWOOD AND OTHER SHEETS , BOARDS</item>
		<item>PRINTED MATERIALS</item>
		<item>PUMPS, PUMPSETS AND PARTS</item>
		<item>READYMADE GARMENTS, TEXTILE MADE UPs AND HOSIERY</item>
		<item>RECTIFIED SPIRIT AND OTHERS</item>
		<item>RENEWABLE ENERGY DEVICES AND BIO-FUELS</item>
		<item>ROOFING MATERIALS</item>
		<item>RUBBER ARTICLES</item>
		<item>SAND</item>
		<item>SANITARY GOODS AND FITTINGS</item>
		<item>SIGN BOARDS AND HOARDINGS</item>
		<item>SHIIPS AND BOATS</item>
		<item>SPICES</item>
		<item>CARDAMOM</item>
		<item>PEPPER</item>
		<item>SPORTS GOODS</item>
		<item>STATIONERY ARTICLES</item>
		<item>MARBLES , SLABS AND TILES</item>
		<item>GRANITE BLOCKS,SLABS AND TILES</item>
		<item>SUGAR AND SUGARCANE</item>
		<item>TEA</item>
		<item>TELEPHONES</item>
		<item>TEXTILES AND FABRICS</item>
		<item>TIMBER AND WOOD</item>
		<item>TOBACCO AND ITS PRODUCTS</item>
		<item>TOILET ARTICLES</item>
		<item>TOYS OF ALL KINDS</item>
		<item>WATCHES AND CLOCKS</item>
		<item>WEIGHTS AND MEASURES</item>
		<item>WORKS CONTRACT</item>
		<item>YARN</item>
		<item>OTHERS</item>
  
    </string-array>
    
    <style name="DefaultButtonText">
       <item name="android:layout_width">fill_parent</item>
        <item name="android:layout_height">wrap_content</item>
        <item name="android:textColor">#979797</item>
        <item name="android:gravity">center</item>
        <item name="android:layout_margin">20dp</item>
        <item name="android:textStyle">normal</item>
        <item name="android:textSize">20sp</item>
        <item name="android:shadowColor">#f9f9f9</item>
        <item name="android:shadowDx">1</item>
        <item name="android:shadowDy">1</item>
        <item name="android:shadowRadius">1</item>
    </style>
    
</resources>
